# docking_control

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/docking_controller/lib/docking_controller/: docking_client  docking_controller
install/docking_controller/share/docking_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/docking_controller/share/docking_controller/cmake/: docking_controllerConfig.cmake
log/: latest_build
my_apriltag/: setup.py
my_apriltag/my_apriltag/: detect_tag_pupil.py
my_docking_control/docking_controller/: CMakeLists.txt  package.xml
my_docking_control/docking_controller/include/: controller.hpp
my_docking_control/docking_controller/scripts/: basic_navigator.py  nav_to_pose.py
my_docking_control/docking_controller/src/: controller.cpp  docking_client.cpp  docking_server.cpp  nav_send_goal.cpp  queue_update_client.cpp  rank_update_server.cpp  record_data.cpp  state_update_server.cpp
my_docking_control/docking_interfaces/: CMakeLists.txt  package.xml
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: docking_controller.launch.py  ld08.launch.py  robot.launch.py  robot_multi.launch.py  rpicamera.launch.py  rviz_launch.py  turtlebot3_state_publisher.launch.py
my_robot_bringup/maps/: map.pgm  map.yaml  map_lab.pgm  map_lab.yaml  test_map.pgm  test_map.yaml
my_robot_bringup/param/: waffle_pi.yaml
my_robot_bringup/params/: camera.yaml  nav2_params.yaml  nav2_params_multi.yaml
my_robot_bringup/rviz/: my_rviz.rviz  nav2_namespaced_view.rviz
sim_bringup/: CMakeLists.txt  package.xml
sim_bringup/launch/: docking.launch.py  gazebo_battery_state.cpp  init_pose_publisher.cpp  multi_spawn_robot.launch.py  rviz_launch.py  spawn_robot.launch.py  spawn_tb3_0.launch.py  spawn_tb3_1.launch.py  spawn_tb3_2.launch.py  start_world.launch.py
sim_bringup/launch_2d/: multi_spawn_robot_v2.launch.py  multi_turtlebot3_launch.py  navigation_launch.py  simulation_2d.launch.py  spawn_tb3_0_2d.launch.py  spawn_tb3_1_2d.launch.py  spawn_tb3_2_2d.launch.py  tb3_1.launch.py  tb3_2.launch.py  vel2joints.py
sim_bringup/maps/: wall_map.pgm  wall_map.yaml
sim_bringup/models/dock/turtlebot3_waffle_pi/: model.sdf
sim_bringup/models/tb3_1/: model.sdf
sim_bringup/models/tb3_2/: model.sdf
sim_bringup/models/tb3_3/: model.sdf
sim_bringup/models/turtlebot3_waffle_pi/: model.sdf  model_no_tf.sdf
sim_bringup/params/: nav2_nodes.yaml  nav2_params_foxy.yaml  tb3_0_params.yaml  tb3_1_params.yaml  tb3_2_params.yaml  tb3_3_params.yaml  waffle_pi.yaml
sim_bringup/rviz/: nav2_namespaced_view2.rviz
sim_bringup/simple_launch/: multi_spawn_robot_v2.launch.py  spawn_robot_v2.launch.py  tb3_0.launch.py
sim_bringup/urdf/tb3_0/: turtlebot3_waffle_pi.urdf
sim_bringup/urdf/tb3_1/: turtlebot3_waffle_pi.urdf
sim_bringup/urdf/tb3_2/: turtlebot3_waffle_pi.urdf
sim_bringup/worlds/: dock_world.world  waffle_pi.model  wall_world.model
