<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hadrien@todo.todo">hadrien</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>nav2_common</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>launch_ros</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>docking_interfaces</depend>
  <depend>urdf</depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <exec_depend>launch_ros</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>  
    <build_type>ament_cmake</build_type>
  </export>
</package>
